@@ -437,12 +437,4 @@
         return lGZIP;
     }
     
-    
-    function linuxWatch(pFile, pCallBack){
-        fs.watchFile(pFile, function(pCurr, pPrev){
-            if(pCurr.mtime !== pPrev.mtime)
-                Util.exec(pCallBack);
-        });
-    }
-    
 })();
